# ssl-streaming-package

./: .gitignore  BUG.md  LICENSE  MVP.md  README.md  countdown_to_time.lua  field.toml.example  run.sh  setup.sh  youtube.toml.example
docs/: INSTALL.md
docs/handbook/: README.md
graphics/: .gitignore  CLAUDE.md  DESIGN_DECISION_DOCUMENT.md  HANDOFF.md  README.md  package-lock.json  package.json  remotion.config.ts
graphics/src/: Root.tsx
obs-template/: README.md  push_scene_ws.py
obs-template/robocup-2026/: scenes.json
services/: pyproject.toml
services/configuration/: pyproject.toml
services/configuration/configuration/: appconfig.py  checks.py
services/configuration/tests/: test_appconfig.py  test_checks.py
services/data_access/: pyproject.toml
services/data_access/data_access/: config.py  fake.py  gamelog.py  gc.py  obs.py  schedule.py  staging.py
services/data_access/tests/: test_fake.py  test_gamelog.py  test_gc.py  test_obs.py  test_schedule_file.py  test_staging.py
services/data_processing/: pyproject.toml
services/data_structures/: pyproject.toml
services/mediamtx-controller/: pyproject.toml
services/mediamtx_controller/: README.md
services/obs-controller/: README.md
services/obs-live-data/: README.md  app.py  conftest.py  field.toml.example  import_schedule.py  pyproject.toml  schedule_logic.py
services/obs-live-data/data/: schedule.json  schedule.md
services/obs-live-data/logos/: SOURCE.md
services/obs-live-data/obs_live_data/: __main__.py  app.py  demo.py  demo_gamelog.py
services/obs-live-data/tests/: test_app.py  test_connect.py  test_main_wiring.py  test_schedule_logic.py
services/youtube/: README.md  pyproject.toml
services/youtube/youtube/: __init__.py  auth.py  client.py  config.py  keys.py  list.py  schedule.py
(+84 files in other folders)
