[project]
name = "configuration"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["data-access", "data-processing"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv.sources]
data-access = { workspace = true }
data-processing = { workspace = true }
