[project]
name = "data-access"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["data-structures", "simpleobsws>=1.4.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
data-structures = { workspace = true }
